Fix alignment

--- a/envergo/static/sass/project_haie.scss
+++ b/envergo/static/sass/project_haie.scss
@@ -1122,3 +1122,10 @@ button.hide-expanded[aria-expanded="true"] {
       );
   }
 }
+
+/* Density buffer */
+.demo-hedge-density-buffer {
+  thead th {
+    text-align: left;
+  }
+}
